<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_light"
    android:orientation="vertical"
    tools:context="com.clickeat.customer.click_eatcustomer.LoginAsDialog">


    <Button
        android:id="@+id/btnDialogLoginClose"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_close" />

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNeedHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:drawableLeft="@drawable/ic_support_32dp"
                android:drawableTint="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/need_help"
                android:textColor="@color/colorWhite"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/txtCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_call_customer_32dp"
                android:drawableTint="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/txt_call"
                android:clickable="true"
                android:textColor="@color/colorWhite"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/txtMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:drawableLeft="@drawable/ic_mail_black_32dp"
                android:drawableTint="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:clickable="true"
                android:lines="2"
                android:text="support@click-eat.co.uk"
                android:textColor="@color/colorWhite"
                android:textSize="8dp" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="30dp"
                android:foregroundGravity="center"
                android:src="@drawable/ce_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mail_20dp"
                        android:tint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/edtLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/email_address"
                        android:paddingLeft="7dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edittext_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password_20dp"
                        android:tint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/edtLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingLeft="7dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <CheckBox
                        android:id="@+id/chkLoginRememberMe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:buttonTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:text="@string/remember_me"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/txtForgotPwd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="7dp"
                        android:layout_weight="0.5"
                        android:fontFamily="sans-serif"
                        android:gravity="end"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="sans-serif"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@+id/btnLogin"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edittext_bg"
                    android:fontFamily="sans-serif"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>